Add index.html second commit

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Favorite App</title>
+	<title>Favorite Application</title>
 </head>
 <body>
 	<h1 class="title">My App</h1>
